# cmake-sfml-project

./: .gitignore  CMakeLists.txt
include/: pch.hpp
scripts/: build.sh  debug.sh  rebuild.sh  run.sh
